# Amber

./: CMakeLists.txt  README.md  grub.cfg
src/: CMakeLists.txt  boot.asm  main.c
src/kernel/: CMakeLists.txt  kernel.c  util.c
src/kernel/include/kernel/: kernel.h  util.h
src/standard/: CMakeLists.txt  allocator.c  terminal.c
src/standard/include/standard/: allocator.h  terminal.h
